--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "TBD",
   "main": "index.js",
   "scripts": {
+    "start": "http-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
@@ -22,6 +23,7 @@
     "jquery-hammerjs": "^2.0.0"
   },
   "devDependencies": {
-    "browserify": "^14.4.0"
+    "browserify": "^14.4.0",
+    "http-server": "^0.10.0"
   }
 }
